--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -64,7 +64,10 @@ color:white;</string>
         <height>0</height>
        </size>
       </property>
-      <layout class="QGridLayout" name="gridLayout">
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <property name="spacing">
+        <number>0</number>
+       </property>
        <property name="leftMargin">
         <number>0</number>
        </property>
@@ -77,10 +80,17 @@ color:white;</string>
        <property name="bottomMargin">
         <number>0</number>
        </property>
-       <property name="spacing">
-        <number>0</number>
-       </property>
-       <item row="0" column="1">
+       <item>
+        <widget class="ViewAP" name="viewAP">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="ViewLAT" name="viewLAT">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -90,17 +100,7 @@ color:white;</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="ViewAP" name="viewAP">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="3">
+       <item>
         <layout class="QVBoxLayout" name="statusLayout">
          <property name="spacing">
           <number>0</number>
